--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
 	font-family:"Open Sans", Arial;
 }
 
+.body-slight-gray {
+	background-color:#F8F8F8;
+}
+
 /*Fonts*/
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
@@ -111,6 +115,7 @@ body {
 .navbar {
 	width:100%;
 	height:50px;
+	overflow:hidden;
 }
 
 .navbar-black {
