--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
-/* CSS Document */
+
+/*
+Copyright Arun Sood 2013
+Licensed under the MIT software license
+*/
 
 /*TEMP*/
 
@@ -8,6 +12,8 @@
 	overflow:hidden;
 	border:#900 1px solid;
 }
+
+/*GLOBALS*/
 
 body {
 	font-family:"Open Sans", Arial;
@@ -50,7 +56,7 @@ body {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', endColorstr='#258dc8',GradientType=0 ); /* IE6-9 */
 	color:#FFF;
 	font-size:1.3em;
-	text-shadow: 0px 3px 2px rgba(150, 150, 150, 1);
+	text-shadow: 0px 1px 1px #000;
 }
 
 .btn-blue-primary-1:active {
@@ -62,6 +68,24 @@ body {
 	background: -ms-linear-gradient(top,  rgba(0,129,198,1) 0%,rgba(37,141,200,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(0,129,198,1) 0%,rgba(37,141,200,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0081c6', endColorstr='#258dc8',GradientType=0 ); /* IE6-9 */
+}
+
+/*Button Gray Sub 1*/
+
+.btn-gray-sub-1 {
+	padding:10px;
+	color:#FFF;
+	font-size:0.8em;
+	font-weight:bold;
+	background: rgb(81,81,81); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(81,81,81,1) 0%, rgba(45,45,45,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(81,81,81,1)), color-stop(100%,rgba(45,45,45,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(81,81,81,1) 0%,rgba(45,45,45,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(81,81,81,1) 0%,rgba(45,45,45,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(81,81,81,1) 0%,rgba(45,45,45,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(81,81,81,1) 0%,rgba(45,45,45,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#515151', endColorstr='#2d2d2d',GradientType=0 ); /* IE6-9 */
+	-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .21), 0 1px 0 rgba(255, 255, 255, .17);
 }
 
 /*CONTAINERS*/
@@ -114,11 +138,28 @@ body {
 
 .navbar {
 	width:100%;
-	height:50px;
+	height:43px;
 	overflow:hidden;
 }
 
+.navbar a.btn {
+	margin-top:4px;
+}
+
+.navbar a {
+	text-decoration:none;
+	color:#FFF;
+}
+
+.navbar-wrap {
+	overflow:hidden;
+	width:95%;
+	margin-left:auto;
+	margin-right:auto;
+}
+
 .navbar-black {
+	color:#FFF;
 	background: rgb(89,89,89); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(89,89,89,1) 0%, rgba(51,51,51,1) 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(89,89,89,1)), color-stop(100%,rgba(51,51,51,1))); /* Chrome,Safari4+ */
@@ -127,5 +168,10 @@ body {
 	background: -ms-linear-gradient(top,  rgba(89,89,89,1) 0%,rgba(51,51,51,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(89,89,89,1) 0%,rgba(51,51,51,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#595959', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
+}
+
+.navbar-3-col {
+	float:left;
+	width:33.3333333333333%;
 }
 
