--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ Licensed under the MIT software license
 
 body {
 	font-family:"Open Sans", Arial;
+	margin:0;
+}
+
+body:last-child {
+	margin-bottom:40px;
 }
 
 .body-slight-gray {
@@ -68,6 +73,38 @@ body {
 	background: -ms-linear-gradient(top,  rgba(0,129,198,1) 0%,rgba(37,141,200,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(0,129,198,1) 0%,rgba(37,141,200,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0081c6', endColorstr='#258dc8',GradientType=0 ); /* IE6-9 */
+}
+
+/*Button Blue Sub 1*/
+
+.btn-blue-sub-1 {
+	-webkit-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.75);
+	box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.75);
+	padding:10px;
+	color:#FFF;
+	font-size:0.8em;
+	font-weight:bold;
+	text-shadow: 0px 1px 0 #000;
+	background: rgb(64,150,238); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(64,150,238,1) 0%, rgba(64,150,238,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(64,150,238,1)), color-stop(100%,rgba(64,150,238,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(64,150,238,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(64,150,238,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(64,150,238,1) 0%,rgba(64,150,238,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(64,150,238,1) 0%,rgba(64,150,238,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4096ee', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+}
+
+.btn-blue-sub-1:active {
+	background: rgb(37,141,200); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(37,141,200,1) 0%, rgba(37,141,200,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(37,141,200,1)), color-stop(100%,rgba(37,141,200,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(37,141,200,1) 0%,rgba(37,141,200,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(37,141,200,1) 0%,rgba(37,141,200,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(37,141,200,1) 0%,rgba(37,141,200,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(37,141,200,1) 0%,rgba(37,141,200,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', endColorstr='#258dc8',GradientType=0 ); /* IE6-9 */
 }
 
 /*Button Gray Sub 1*/
@@ -142,6 +179,11 @@ body {
 	overflow:hidden;
 }
 
+.navbar-fixed-top {
+	position:fixed;
+	top:0;
+}
+
 .navbar a.btn {
 	margin-top:4px;
 }
@@ -158,6 +200,23 @@ body {
 	margin-right:auto;
 }
 
+.navbar-feature {
+	width:120px;
+	margin:8px auto 0 auto;
+}
+
+.navbar-feature a {
+	padding:21px 0;
+	margin-left:20px;
+	font-size:1.4em;
+}
+
+.navbar-feature a:first-child {
+	margin-left:0;
+}
+
+/*Navbar Black*/
+
 .navbar-black {
 	color:#FFF;
 	background: rgb(89,89,89); /* Old browsers */
@@ -170,8 +229,51 @@ body {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#595959', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
 }
 
+.navbar-black i {
+	color:#A1A1A1;
+}
+
+.navbar-black i:active {
+	color:#FFF;
+}
+
 .navbar-3-col {
 	float:left;
 	width:33.3333333333333%;
 }
 
+.navbar-3-col:last-child {
+	text-align:right;
+}
+
+/*FOOTERS*/
+
+.footer {
+	width:100%;
+	height:40px;
+	background-color:#FFF;
+	border-top:#999 1px solid;
+	overflow:hidden;
+}
+
+.footer-fixed {
+	position:fixed;
+	bottom:0;
+}
+
+.footer-element {
+	float:left;
+	width:20%;
+	text-align:center;
+	color:#777;
+	padding-top:5px;
+}
+
+.footer-element-title {
+	font-size:0.6em;
+	font-weight:bold;
+}
+
+.footer-element.active {
+	color:#06C;
+}
