--- a/css/style.css
+++ b/css/style.css
@@ -349,4 +349,28 @@ body:last-child {
 	left:0;
 	background-color:#333;
 	display:none;
+	z-index:9999;
+}
+
+/*SWIPE SLIDER*/
+
+.swipe {
+	overflow: hidden;
+	visibility: hidden;
+	position: relative;
+}
+
+.swipe-wrap {
+	overflow: hidden;
+	position: relative;
+}
+
+.swipe-wrap img {
+	width:100%;
+}
+
+.swipe-wrap > div {
+	float:left;
+	width:100%;
+	position: relative;
 }
