--- a/css/style.css
+++ b/css/style.css
@@ -339,33 +339,61 @@ body:last-child {
 
 /*SLIDING MENUS*/
 
-.sliding-menu-nav {
-	list-style-type:none;
-	margin:20px 0 0 20px;
-	padding:0;
-}
-
-.sliding-menu-nav li {
-	padding:10px;
-}
-
-.sliding-menu-nav li.nav-header {
-	text-transform:capitalize;
-	font-weight:bold;
-	color:#FFF;
-}
-
-/*Sliding Menu Left 1*/
-
-.sliding-menu-left-1 {
+.sliding-menu {
 	width:70%;
 	height:100%;
 	position:absolute;
 	top:0;
 	left:0;
-	background-color:#333;
 	display:none;
 	z-index:9999;
+}
+
+.sliding-menu-nav {
+	list-style-type:none;
+	margin:20px 0 0 0;
+	padding:0;
+}
+
+.sliding-menu-nav li {
+	padding:10px 0 10px 15px;
+}
+
+.sliding-menu-nav a {
+	color:#FFF;
+	font-size:0.8em;
+	text-decoration:none;
+}
+
+.sliding-menu-nav li.nav-header {
+	text-transform:uppercase;
+	font-weight:bold;
+	color:#FFF;
+	font-size:0.7em;
+	border:none;
+	background-color:#333;
+}
+
+.sliding-menu-nav li.active {
+	background-color:#222;
+	-webkit-box-shadow:0 0px 5px -2px #999;
+}
+
+.sliding-menu-nav li.nav-search {
+	padding:0 5px 10px 5px;
+}
+
+.nav-search input {
+	border-radius:50px;
+	border:#CCC 1px solid;
+	padding:5px;
+	width:94%;
+}
+
+/*Sliding Menu Left 1*/
+
+.sliding-menu-left-1 {
+	background-color:#444;
 }
 
 /*SWIPE SLIDER*/
